// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserHome > render a <UserHome /> with additional emails 1`] = `
<section
  className="m-4 flex flex-col gap-2"
>
  <h3
    className="_font-heading-md-semibold_1g2sj_129"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Browser
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        New apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Regular apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</section>
`;

exports[`UserHome > render a <UserHome /> with an unverified email 1`] = `
[
  <div
    className="_alert_fxw8y_19"
    data-type="critical"
  >
    <svg
      aria-hidden={true}
      className="_icon_fxw8y_52"
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 17a.97.97 0 0 0 .713-.288A.968.968 0 0 0 13 16a.968.968 0 0 0-.287-.713A.968.968 0 0 0 12 15a.968.968 0 0 0-.713.287A.968.968 0 0 0 11 16c0 .283.096.52.287.712.192.192.43.288.713.288Zm0-4c.283 0 .52-.096.713-.287A.968.968 0 0 0 13 12V8a.967.967 0 0 0-.287-.713A.968.968 0 0 0 12 7a.968.968 0 0 0-.713.287A.967.967 0 0 0 11 8v4c0 .283.096.52.287.713.192.191.43.287.713.287Zm0 9a9.738 9.738 0 0 1-3.9-.788 10.099 10.099 0 0 1-3.175-2.137c-.9-.9-1.612-1.958-2.137-3.175A9.738 9.738 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.738 9.738 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.738 9.738 0 0 1 12 22Z"
        fill="currentColor"
      />
    </svg>
    <div
      className="_content_fxw8y_44"
    >
      <p
        className="_title_fxw8y_48"
      >
        Unverified email
      </p>
      <p>
        You have 
        1
         unverified email address(es). 
        <a
          href="/profile"
          onClick={[Function]}
        >
          Check
        </a>
      </p>
    </div>
    <svg
      aria-label="Close"
      className="_close_fxw8y_68"
      fill="currentColor"
      height={16}
      onClick={[Function]}
      role="button"
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 13.4-4.9 4.9a.948.948 0 0 1-.7.275.948.948 0 0 1-.7-.275.948.948 0 0 1-.275-.7.95.95 0 0 1 .275-.7l4.9-4.9-4.9-4.9a.948.948 0 0 1-.275-.7.95.95 0 0 1 .275-.7.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275l4.9 4.9 4.9-4.9a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L13.4 12l4.9 4.9a.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.948.948 0 0 1-.7-.275L12 13.4Z"
        fill="currentColor"
      />
    </svg>
  </div>,
  <section
    className="m-4 flex flex-col gap-2"
  >
    <h3
      className="_font-heading-md-semibold_1g2sj_129"
    >
      Where you're signed in
    </h3>
    <div
      className="_block_17898c flex flex-row justify-between align-center gap-1"
    >
      <div
        className="flex flex-col"
      >
        <h1
          className="_font-body-md-semibold_1g2sj_69"
        >
          Browser
        </h1>
        <p
          className="_font-body-md-regular_1g2sj_65"
        >
          0
           active
           
          sessions
        </p>
      </div>
      <a
        href="/sessions"
        onClick={[Function]}
      >
        View all
      </a>
    </div>
    <div
      className="_block_17898c flex flex-row justify-between align-center gap-1"
    >
      <div
        className="flex flex-col"
      >
        <h1
          className="_font-body-md-semibold_1g2sj_69"
        >
          New apps
        </h1>
        <p
          className="_font-body-md-regular_1g2sj_65"
        >
          0
           active
           
          sessions
        </p>
      </div>
      <a
        href="/oauth2-sessions"
        onClick={[Function]}
      >
        View all
      </a>
    </div>
    <div
      className="_block_17898c flex flex-row justify-between align-center gap-1"
    >
      <div
        className="flex flex-col"
      >
        <h1
          className="_font-body-md-semibold_1g2sj_69"
        >
          Regular apps
        </h1>
        <p
          className="_font-body-md-regular_1g2sj_65"
        >
          0
           active
           
          sessions
        </p>
      </div>
      <a
        href="/compat-sessions"
        onClick={[Function]}
      >
        View all
      </a>
    </div>
  </section>,
]
`;

exports[`UserHome > render a <UserHome /> without primary email 1`] = `
<section
  className="m-4 flex flex-col gap-2"
>
  <h3
    className="_font-heading-md-semibold_1g2sj_129"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Browser
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        New apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Regular apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</section>
`;

exports[`UserHome > render an simple <UserHome /> 1`] = `
<section
  className="m-4 flex flex-col gap-2"
>
  <h3
    className="_font-heading-md-semibold_1g2sj_129"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Browser
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        New apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c flex flex-row justify-between align-center gap-1"
  >
    <div
      className="flex flex-col"
    >
      <h1
        className="_font-body-md-semibold_1g2sj_69"
      >
        Regular apps
      </h1>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</section>
`;
